the site is now showing the correct title as well as correct footer. I added a description and it is all functional

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Giorgio Bordoli"
-description: "Personal blog with essays in English & Italian"
+title: "My Brain by Gio Bordoli"
+description: "Here I collect my thoughts and ideas about life, the future, AI, work, philosophy and honestly watever comes to my fucking mind :)"
 baseurl: "" 
 url: "https://giobordoli.github.io"
 
